<resources>
    <string name="app_name">My Application</string>
    <string name="login_title">로그인</string>
    <string name="user_id_hint">아이디</string>
    <string name="password_hint">비밀번호</string>
    <string name="login_button_text">로그인</string>
    <string name="register_button_text">가입하기</string>
    <string name="go_to_register_button_text">회원가입</string>
    <string name="content_desc_rocket">로켓 아이콘</string>
    <string name="content_desc_scroll_bottom">맨 아래로 이동</string>
    <string name="title_chat_list">채팅 목록</string>
    <string name="hint_search">대화 검색 (제목)</string>
    <string name="title_ai_coach">AI 식단·운동 코치</string>
    <string name="empty_title">안녕하세요! AI 코치입니다</string>
    <string name="empty_desc">운동 계획, 식단 구성, 회복 전략 등 무엇이든 질문해 보세요.</string>
    <string name="btn_new_chat">새 채팅</string>
    <string name="btn_send">전송</string>
    <string name="hint_question">운동 또는 식단에 대해 물어보세요… (Enter: 전송 / Shift+Enter: 줄바꿈)</string>
    <string name="btn_logout">로그아웃</string>
    <string name="btn_logout_all">모든 기기에서 로그아웃</string>
</resources>